--- a/index.html
+++ b/index.html
@@ -104,6 +104,96 @@
             </div>
             </div>
         </section>
+        <section class="chalange1">
+            <div class="chalange">
+                <div class="chalenge-content">
+                    <p>
+                        Bangladesh, located in South Asia, is a vibrant country known for its lush green landscapes, the mighty Padma, Meghna, and Jamuna rivers, and the Sundarbans, home to the Royal Bengal Tiger. It has a rich cultural heritage, with traditions in art, music, and cuisine, and celebrates diverse festivals like Pohela Boishakh. Despite challenges, Bangladesh has made remarkable progress in development, particularly in education, health, and the garment industry.</p>
+                </div>
+                <div class="chalenge-foot1">
+                    <h1>Dr. Muhammad Yunus</h1>
+                </div>
+                <div class="chalenge-foot-2">
+                    <p>Chief Adviser of the People's Republic of Bangladesh</p>
+                </div>
+            </div>
+        </section>
+</header>
+<main>
+    <section id="news">
+        <div class="news-dad">
+            <div class="news-heading">
+                <h1>Recent News</h1>
+            </div>
+            <div class="news-content">
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            </div>
+            <div class="satelite1">
+                <div id="satelite-dad">
+                    <div class="satelite-img-dad">
+                    <div class="satelite-img1">
+                        <img src="./B11A1--assignment-1-main/assets/satelite.png" alt="">
+                    </div>
+                </div>
+                <div class="satelite-content-dad">
+                    <div class="satelite-heading">
+                        <h1>Bangladesh Launches New Satellite</h1>
+                    </div>
+                    <div class="satelite-ligo">
+                        <img src="./B11A1--assignment-1-main/assets/al-jazeera.png" alt="">
+                    </div>
+                    <div class="satelite-time-peradox">
+                    <div class="satelite-time1">
+                        <p>Date: 05/01/2025</p>
+                    </div>
+                    <div class="satelite-time2">
+                        <p>Time: 10.25 PM</p>
+                    </div>
+                </div>
+                <div class="satelite-content">
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                </div>
+                <div class="satelite-btn">
+                    <button>Read More</button>
+                </div>
+            </div>
+                </div>
+            </div>
+            <div class="satelite2">
+                <div id="satelite-dad">
+                <div class="satelite-content-dad">
+                    <div class="satelite-heading">
+                        <h1>Bangladesh Launches New Satellite</h1>
+                    </div>
+                    <div class="satelite-ligo">
+                        <img src="./B11A1--assignment-1-main/assets/al-jazeera.png" alt="">
+                    </div>
+                    <div class="satelite-time-peradox">
+                    <div class="satelite-time1">
+                        <p>Date: 05/01/2025</p>
+                    </div>
+                    <div class="satelite-time2">
+                        <p>Time: 10.25 PM</p>
+                    </div>
+                </div>
+                <div class="satelite-content">
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                </div>
+                <div class="satelite-btn">
+                    <button>Read More</button>
+                </div>
+            </div>
+            <div class="satelite-img-dad">
+                <div class="satelite-img1">
+                    <img src="./B11A1--assignment-1-main/assets/satelite.png" alt="">
+                </div>
+            </div>
+                </div>
+            </div>
+        </div>
+    </section>
         </header>
 </body>
 </html>
