--- a/index.html
+++ b/index.html
@@ -195,5 +195,39 @@
         </div>
     </section>
         </header>
+        <main>
+            <section class="donate">
+                <div class="donate-dad">
+                    <div class="donate-heading">
+                        <h1>Donate Today</h1>
+                    </div>
+                    <div class="donate-content">
+                        <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+                    </div>
+                    <div class="taka-dad">
+                        <div class="t100">
+                        <button>100 Taka</button>
+                    </div>
+                    <div class="t200">
+                        <button>200 Taka</button>
+                    </div>
+                    <div class="t500">
+                        <button>500 Taka</button>
+                    </div>
+                    <div class="t1000">
+                        <button>1000 Taka</button>
+                    </div>
+                    </div>
+                </div>
+                <div class="input">
+                <form class="form">
+                    <input type="text" placeholder="Other Amount (Taka)">
+                </form>
+                <div class="donate-btn">
+                    <button>Done Now</button>
+                </div>
+            </div>
+            </section>
+        </main>
 </body>
 </html>
