--- a/index.html
+++ b/index.html
@@ -228,6 +228,27 @@
                 </div>
             </div>
             </section>
+            <section class="chalenge2">
+                <div class="chalenge2-dad">
+                    <div class="chalenge2-heading">
+                        <h1>Subscribe Newsletter</h1>
+                    </div>
+                    <div class="chalenge2-content">
+                        <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+                    </div>
+                    <div class="email">
+                    <div class="email1">
+                        <input type="email" placeholder="Enter your email here">
+                    </div>
+                    <div class="email2">
+                        <button>Subscribe</button>
+                    </div>
+                </div>
+                <div class="promis">
+                    <p>We promise not to spam you!</p>
+                </div>
+                </div>
+            </section>
         </main>
 </body>
 </html>
