--- a/index.html
+++ b/index.html
@@ -250,5 +250,18 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <section class="foot">
+                <div class="foot-dad">
+                    <div class="foot-head">
+                <h1>Bangladesh 2.0</h1>
+            </div>
+            <hr>
+            <div class="foot-icon">
+                <img src="./B11A1--assignment-1-main/assets/facebook.png" alt=""><img src="./B11A1--assignment-1-main/assets/instagram.png" alt=""><img src="./B11A1--assignment-1-main/assets/x.png" alt="">
+            </div>
+            </div>
+            </section>
+        </footer>
 </body>
 </html>
